--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
+    "body-parser": "^1.18.3",
     "clean-webpack-plugin": "^1.0.0",
     "concurrently": "^4.0.0",
     "css-loader": "^2.0.0",
@@ -39,6 +41,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.17.3",
+    "rxjs": "^6.4.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
